<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clickable="true"
              android:background="@color/md_white_1000">

    <RelativeLayout
        android:id="@+id/rlbtn1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@mipmap/but_or"
        android:clickable="true"
        android:elevation="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/day1"
            android:textColor="@color/md_white_1000"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlbtn2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@mipmap/but_or"
        android:clickable="true"
        android:elevation="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/day2"
            android:textColor="@color/md_white_1000"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlbtn3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@mipmap/but_or"
        android:clickable="true"
        android:elevation="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/day3"
            android:textColor="@color/md_white_1000"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlbtn4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@mipmap/but_or"
        android:clickable="true"
        android:elevation="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/day4"
            android:textColor="@color/md_white_1000"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlbtn5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@mipmap/but_or"
        android:clickable="true"
        android:elevation="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/day5"
            android:textColor="@color/md_white_1000"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlbtn6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@mipmap/but_or"
        android:clickable="true"
        android:elevation="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/day6"
            android:textColor="@color/md_white_1000"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlbtn7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@mipmap/but_or"
        android:clickable="true"
        android:elevation="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/day7"
            android:textColor="@color/md_white_1000"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <Button
        android:id="@+id/rlbtn8"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:text="Отмена"
        android:textColor="@color/colorBlueToolbar"
        android:textStyle="bold"/>



</LinearLayout>